--- a/foundry.toml
+++ b/foundry.toml
@@ -3,5 +3,8 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = ['@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
+ffi = true 
+# ^ should be false outside of these tuts
+fs_permissions = [{access = "read", path = "./images"}]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
